# prestige

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  limine.cfg  prestige.py
.cargo/: config.toml  linker.ld  runner.sh
.cargo/targets/: x86_64-prestige.json
.github/workflows/: build.yml
prestige_macros/: Cargo.toml
prestige_macros/src/: lib.rs  test.rs
src/: kernel.rs  lib.rs  main.rs  test.rs  tests.rs  vga.rs
src/kernel/: fs.rs  gdt.rs  interrupts.rs  io.rs  mem.rs  multitask.rs  process.rs  resource.rs  scheduler.rs  stdout.rs  syscall.rs  task.rs
src/kernel/arch/: aarch64.rs  x86_64.rs
src/kernel/arch/x86_64/: gdt.rs  interrupts.rs  mem.rs  syscall.rs
src/kernel/arch/x86_64/asm/: syscall_handler.asm
src/kernel/arch/x86_64/mem/: allocator.rs
src/kernel/io/: console.rs  keyboard.rs  serial.rs  stdin.rs  stdout.rs  terminal.rs  vga.rs
src/kernel/mem/: allocator.rs  frame_alloc.rs  heap.rs  paging.rs
src/kernel/multitask/: executor.rs
src/kernel/syscall/: service.rs
src/kernel/task/: asynchronous.rs
