[package]
name = "prestige"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akabinds/prestige"
readme = "README.md"
default-run = "prestige"

[features]
default = ["vga"]
vga = []
serial = []

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
pc-keyboard = "0.6.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.4.5"
vte = "0.11.0"
x86_64 = "0.14.10"
