[package]
name = "prestige"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akabinds/prestige"
readme = "README.md"
default-run = "prestige"

[features]
default = ["vga"]
vga = []
serial = []

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
pc-keyboard = "0.6.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.4.5"
vte = "0.11.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.10"
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
raw-cpuid = "10.6.0"

[build-dependencies]
nasm-rs = "0.2.4"

[package.metadata.bootimage]
run-args = [
    "-no-reboot", "-no-shutdown"
]

[profile.dev]
opt-level = 1
lto = false
debug = true
debug-assertions = true 
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
