[package]
name = "prestige"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akabinds/prestige"
readme = "README.md"

[dependencies]
bitflags = "1.3.2"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
limine = "0.1.9"
linked_list_allocator = "0.10.4"
log = "0.4.17"
pc-keyboard = "0.6.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.10"
raw-cpuid = "10.6.0"

[build-dependencies]
nasm-rs = "0.2.4"

[dependencies.prestige_macros]
path = "prestige_macros"

[profile.dev]
opt-level = 1
lto = false
debug = true
debug-assertions = true 
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
debug = true
debug-assertions = false
codegen-units = 1
